# mptt-core

./: README.md  pyproject.toml
configs/: smoke.yaml
models/: __init__.py  causal_transformer.py  memory_tape.py
mptt/: __init__.py  checkpoint.py  config.py  data.py  losses.py  outputs.py  train.py
scripts/: train_smoke.sh
tests/: conftest.py  test_generation.py  test_losses.py  test_shapes.py  test_train_smoke.py
tests/fixtures/: tiny.txt
