[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mptt-core"
version = "0.1.0"
description = "Minimal multi-pass transformer training scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["mptt*", "models*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
